--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<form method="post">
+	<label for="name">Name</label>
+	<input type="text" id="name" name="name" minlength="3", maxlength="50", required ><br>
+	<label for="portfolio">Portfolio</label>
+	<input type="url" id="portfolio" name="portfolio" required><br>
+	<label for="favColor">Favorite Color</label>
+	<input type="color" id="favColor" name="favColor" required><br>
+	<label for="likeness">Likeness</label>
+	<input type="Range" id="likeness" name='likeness' min="1", max="100" required><br>
+	</form>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
